<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="manual_sync">Manual sync</string>
    <string name="sync_configuration">Sync configuration</string>
    <string name="sync_configuration_title">Sync configuration?</string>
    <string name="sync_configuration_message">This may break compatibility with existing data if a questionnaire or care plan has changed version or been removed. Sync configuration anyway?</string>
    <string name="syncing_configuration">Syncing configuration…</string>
    <string name="sync_configuration_completed">Configuration sync complete</string>
    <string name="sync_configuration_failed">Configuration sync failed. Check internet connection or try again later</string>
    <string name="sync">Sync</string>
    <string name="language">Language</string>
    <string name="logout_as_user">Log out as </string>
    <string name="show_overdue">Show overdue</string>
    <string name="search_hint">Search name or ID</string>
    <string name="search">Search for name</string>
    <string name="sync_data">SYNC DATA</string>
    <string name="scan_bar_code">SCAN BARCODE</string>
    <string name="empty_client_list_message_title">No Results</string>
    <string name="empty_client_list_message_details">Sorry, we could not find client with given name or ID</string>
    <string name="register_new_client">Register new client</string>
    <string name="default_app_title" translatable="false">Fhir App</string>
    <string name="app_logo">Application logo</string>
    <string name="powered_by">Powered By</string>
    <string name="app_version">App version %1$d(%2$s)</string>
    <string name="data_migration_version">Data migration version %1$s</string>
    <string name="last_sync">Last sync %1$s</string>
    <string name="login_text">LOGIN</string>
    <string name="login_call_fail_error_message">Failed to verify credentials from the server. Check your internet connection</string>
    <string name="userinfo_call_fail_error_message">Failed to get user info from server. Check your internet connection</string>
    <string name="select_language">Select Language</string>
    <string name="logout_user">Log out as %1$s</string>
    <string name="sync_completed">Sync complete</string>
    <string name="syncing">Syncing</string>
    <string name="syncing_up" >Syncing up&#8230;</string>
    <string name="syncing_down" >Syncing down&#8230;</string>
    <string name="syncing_initiated">Sync initiated&#8230;</string>
    <string name="sync_failed">Sync failed. Check internet connection or try again later</string>
    <string name="sync_completed_with_errors">Sync completed with errors. Retrying…</string>
    <string name="sync_unauthorised">Sync failed because the authentication credentials are invalid.</string>
    <string name="refresh_token_fail_error_message">Failed to retrieve credentials from the server. Please check your internet connection.</string>
    <string name="try_again">Try again</string>
    <string name="status_vaccinated">Vaccinated</string>
    <string name="status_overdue">Overdue</string>
    <string name="status_received_vaccine">Vaccine %1$d \n%2$s</string>
    <string name="fully_vaccinated">Fully vaccinated</string>
    <string name="already_fully_vaccinated">Can not receive another dose. Already fully vaccinated</string>
    <string name="record_vaccine_nl">Record\nVaccine</string>
    <string name="date_last_seen">Last seen %1$s</string>
    <string name="date_last_visited">Last visited %1$s</string>
    <string name="str_save">Save</string>
    <string name="save">Save</string>
    <string name="login_error">Login error: %1$s</string>
    <string name="str_next">NEXT</string>
    <string name="str_previous">PREVIOUS</string>
    <string name="str_page_info">Page %1$d of %2$d</string>
    <string name="search_result">%1$d RESULT(S)</string>
    <string name="no_results">No results</string>
    <string name="no_results_message">Sorry we can\'t find person with the provided name or ID</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="unknown">Unknown</string>
    <string name="syncing_failed">Sync failed</string>
    <string name="syncing_retry">Retry sync</string>
    <string name="syncing_in_progress">Sync in progress</string>
    <string name="loading">Loading</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="error_logging_out">Logout error message: %1$s</string>
    <string name="cannot_logout_user">Unable to logout: Already logged out or device is offline.</string>
    <string name="error_loading_config_http_error">Could not load configuration. Please try again later</string>
    <string name="error_loading_config_no_internet">Could not load configuration. Please check your internet connection</string>
    <string name="error_loading_config_general">Error connecting to the server. Please contact the system administrator</string>
    <string name="error_loading_form">Error loading form</string>
    <string name="error_saving_form">Error encountered cannot save form</string>
    <string name="form_progress_message">Processing data. Please wait</string>
    <string name="questionnaire_alert_back_pressed_message">Are you sure you want to go back?</string>
    <string name="questionnaire_in_progress_alert_back_pressed_message">If you leave without saving, all your changes will not be saved</string>
    <string name="questionnaire_alert_back_pressed_title">You have unsaved changes</string>
    <string name="questionnaire_alert_back_pressed_button_title">Discard changes</string>
    <string name="questionnaire_alert_back_pressed_save_draft_button_title">Save as draft</string>
    <string name="questionnaire_alert_neutral_button_title">Cancel</string>
    <string name="questionnaire_alert_negative_button_title">Discard Changes</string>
    <string name="questionnaire_alert_confirm_button_title">Yes</string>
    <string name="questionnaire_alert_invalid_message">Given details have validation errors. Resolve errors and submit again</string>
    <string name="questionnaire_alert_invalid_title">Validation Failed</string>
    <string name="questionnaire_alert_ack_button_title">OK</string>
    <string name="questionnaire_alert_open_draft_button_title">Open draft</string>
    <string name="questionnaire_alert_delete_draft_button_title">Delete draft</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_title">Forgot Password!</string>
    <string name="more">More</string>
    <string name="call_supervisor">Please contact your supervisor.</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="dial_number">DIAL NUMBER</string>
    <string name="register">Register</string>
    <string name="visits">Visits</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="select_register">Select register</string>
    <string name="tick">Tick</string>
    <string name="clients">Clients</string>
    <string name="logout">Log out</string>
    <string name="application_id">Application ID</string>
    <string name="app_id_sample" translatable="false">e.g. ecbis, quest, cha</string>
    <string name="load_configurations">LOAD CONFIGURATIONS</string>
    <string name="fhir_core_app" translatable="false">FHIRCORE APP</string>
    <string name="remember_app">Remember application</string>
    <string name="done">Done</string>
    <string name="replace_photo">Replace photo</string>
    <string name="take_photo">Take photo</string>
    <string name="edit">Edit</string>
    <string name="application_not_supported">Error loading application %1$s configs</string>
    <string name="eCBIS_app_name" translatable="false">eCBIS</string>
    <string name="invalid_login_credentials">username or password is invalid</string>
    <string name="invalid_form_id">Invalid form ID attached</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="required_constraint_validation_error_msg">There is no response to the required field.</string>
    <string name="set_pin">Set PIN</string>
    <string name="set_pin_message">CHA will use this PIN to login</string>
    <string name="enter_pin_for_user">Enter PIN for %1$s</string>
    <string name="incorrect_pin_please_retry">Incorrect PIN, please try again</string>
    <string name="pin_menu_login">Login</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="percentage" translatable="false">%</string>
    <string name="logging_out">Logging out. Please wait…</string>
    <string name="session_expired">Session has been expired and must login again</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="id" translatable="false">ID: %1$s</string>
    <string name="see_all">SEE ALL</string>
    <string name="forms">FORMS</string>
    <string name="medical_history">MEDICAL HISTORY</string>
    <string name="upcoming_services">UPCOMING SERVICES</string>
    <string name="service_card">SERVICE CARD</string>
    <string name="other_patients">Other patients</string>
    <string name="select_location">Select location</string>
    <string name="responses">RESPONSES (%1$s)</string>
    <string name="multi_user_login_attempt">Attempted to login with a different provider</string>
    <string name="please_wait">Please wait…</string>
    <string name="clear_database">Reset data</string>
    <string name="transfer_data">Transfer Data</string>
    <string name="clear_database_title">Reset Database!</string>
    <string name="clear_database_message">Resetting database will clear all records from your device. This action can’t be undone.</string>
    <string name="resetting_app">Resetting Application…</string>
    <string name="sync_strategy_careteam_system" translatable="false">https://smartregister.org/care-team-tag-id</string>
    <string name="sync_strategy_location_system" translatable="false">https://smartregister.org/location-tag-id</string>
    <string name="sync_strategy_organization_system" translatable="false">https://smartregister.org/organisation-tag-id</string>
    <string name="sync_strategy_practitioner_system" translatable="false">https://smartregister.org/practitioner-tag-id</string>
    <string name="sync_strategy_related_entity_location_system" translatable="false">https://smartregister.org/related-entity-location-tag-id</string>
    <string name="sync_strategy_related_entity_location_display" translatable="false">Related Entity Location</string>
    <string name="sync_strategy_careteam_display" translatable="false">Practitioner CareTeam</string>
    <string name="sync_strategy_location_display" translatable="false">Practitioner Location</string>
    <string name="sync_strategy_organization_display" translatable="false">Practitioner Organization</string>
    <string name="sync_strategy_practitioner_display" translatable="false">Practitioner</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="weeks">Week(s)</string>
    <string name="days">Days(s)</string>
    <string name="initializing">Initializing settings &#8230;</string>
    <string name="initializing_application">Initializing application &#8230;</string>
    <string name="username_sample" translatable="false">e.g JohnDoe</string>
    <string name="percentage_progress" translatable="false">%1$d%%</string>
    <string name="error_occurred">Something went wrong…</string>
    <string name="insights">Insights</string>
    <string name="export_db" translatable="false">Export DB</string>
    <string name="exporting_db" translatable="false">Exporting DB...</string>
</resources>